[P1-001] feat(config): add pydantic settings

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # Example environment settings
-API_KEY=""
-DATABASE_URL=""
+# Application environment (e.g., development, test, production)
+APP_ENV="development"
+# Logging level
+LOG_LEVEL="INFO"
+# Database connection URL
+DB_URL="sqlite+aiosqlite:///./dev.db"
+# Test database connection URL
+TEST_DB_URL="sqlite+aiosqlite:///./test.db"
+# Feature flags as JSON mapping
+FEATURE_FLAGS="{}"
