--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Brand Nexus"
 authors = [{ name = "Brand Nexus", email = "dev@example.com" }]
 readme = "README.md"
 requires-python = ">=3.11"
+dependencies = ["pydantic>=2.0", "pydantic-settings>=2.0"]
 
 [project.optional-dependencies]
 dev = ["ruff", "black", "mypy", "pytest", "pytest-cov", "pytest-asyncio"]
@@ -23,6 +24,7 @@ target-version = ["py311"]
 [tool.mypy]
 python_version = "3.11"
 strict = false
+plugins = ["pydantic.mypy"]
 
 [tool.pytest.ini_options]
 addopts = "-q --cov=src/brandnexus --cov-report=term-missing --cov-fail-under=70"
