--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -29,6 +29,7 @@ jobs:
             requirements.txt
             requirements-dev.txt
       - run: pip install -r requirements-dev.txt
+      - run: pip install bandit
       - name: Bandit
         run: bandit -r src -q
       - name: Secret scan
